# Envelope-Encryption

./: .env.example  .gitignore  API_REFERENCE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  POSTGRES_README.md  QUICKSTART.md  QUICK_START.md  README.md  SIMPLIFIED_ARCHITECTURE.md  schema.sql
.claude/: settings.local.json
doc/: all.html  index.html  sidebar-items.js
doc/crypto/: constant.AES_256_KEY_SIZE.html  constant.NONCE_SIZE.html  constant.TAG_SIZE.html  fn.generate_random_bytes.html  index.html  sidebar-items.js  struct.AesGcmCipher.html  struct.EncryptedData.html  struct.SecureKey.html
doc/envelope/: index.html  sidebar-items.js  struct.EncryptedEnvelope.html  struct.EnvelopeEncryption.html
doc/error/: enum.EnvelopeError.html  index.html  sidebar-items.js  type.Result.html
doc/key_manager/: index.html  sidebar-items.js  struct.DekInfo.html  struct.KeyManager.html  struct.KeyStats.html  struct.RotationResult.html  struct.UserKekInfo.html
doc/postgres_envelope/: index.html  sidebar-items.js  struct.BulkRotationResult.html  struct.GeneratedDek.html  struct.PostgresEnvelopeService.html  struct.UserKekRotationResult.html
doc/postgres_storage/: enum.KekStatus.html  index.html  sidebar-items.js  struct.PostgresStorage.html  struct.StoredDek.html  struct.StoredKek.html
doc/storage/: enum.KeyType.html  index.html  sidebar-items.js  struct.EncryptedRecord.html  struct.InMemoryStorage.html  struct.KeyMetadata.html  struct.StoredKey.html  trait.KeyStorage.html
examples/: postgres_demo.rs
migrations/: 001_init_schema.sql  002_simplified_schema.sql
python/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/demo/: benchmark.py
python/envelope_encryption/: __init__.py  benchmark.py  postgres.py
python/src/envelope_encryption/: __init__.py  crypto.py  envelope.py  errors.py  key_manager.py  postgres_envelope.py  postgres_storage.py  storage.py
python/tests/: conftest.py
rust/: Cargo.toml
rust/src/: error.rs  key_manager.rs  lib.rs  postgres_envelope.rs
src/: crypto.rs  envelope.rs  error.rs  key_manager.rs  lib.rs  main.rs  postgres_envelope.rs  postgres_storage.rs  storage.rs
