[package]
name = "envelope-encryption"
version = "0.1.0"
edition = "2021"
authors = ["Envelope Encryption Team"]
description = "HSM-like envelope encryption module with AES-256-GCM"
license = "MIT"

[lib]
name = "envelope_encryption"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
# Cryptography
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
zeroize = { version = "1.7", features = ["derive"] }
parking_lot = "0.12"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
default = []
postgres = []  # Future PostgreSQL support


