[package]
name = "envelope-encryption"
version = "0.1.0"
edition = "2021"
description = "Envelope encryption with AES-256-GCM"
license = "MIT"

[lib]
name = "envelope_encryption"
path = "src/lib.rs"

[[bin]]
name = "hsm"
path = "src/main.rs"

[features]
default = ["postgres"]
postgres = []

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
zeroize = { version = "1.7", features = ["derive"] }
parking_lot = "0.12"

# PostgreSQL support
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
